add AI web page

--- a/web/src/locales/en.json
+++ b/web/src/locales/en.json
@@ -230,6 +230,11 @@
     "go-to-home": "Go to Home"
   },
   "setting": {
+    "ai-platform": "AI Platform",
+    "ai-platform-section": {
+      "title": "AI Platform Management",
+      "description": "Manage and configure AI platforms for your workspace"
+    },
     "access-token-section": {
       "access-token-copied-to-clipboard": "Access token copied to clipboard",
       "access-token-deletion": "Are you sure to delete access token {{accessToken}}? THIS ACTION IS IRREVERSIBLE.",
